# botDiscord

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: rust.yml
rpxc/: Dockerfile
src/: events.rs  main.rs  server.rs
src/commands/: math.rs  mod.rs  music.rs  reply.rs
