[package]
name = "discord_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10", default-features=false,  features = [ "client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "cache", "voice", "unstable_discord_api", "collector"]}
tokio = { version = "1.0", features = ["macros","rt-multi-thread","signal"] }
hyper = "0.14"
songbird = { version = "0.2", features = ["builtin-queue"] }
url = "2"
